SUBDIRS=common css mgcl activity graphics drawable view animation components \
    services resource

# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl

# Which header files to install
myinclude_HEADERS= \
    hfcl.h \
    common.h \
    activity.h \
    view.h \
    graphics.h \
    drawable.h \
    animation.h \
    resource.h \
    components.h \
    services.h
