SUBDIRS=common resource css hvml view activity graphics animation services mgcl

# The directory where the include files will be installed
myincludedir=$(includedir)/hfcl

# Which header files to install
myinclude_HEADERS= \
    hfcl.h \
    common.h \
    activity.h \
    css.h \
    hvml.h \
    view.h \
    graphics.h \
    drawable.h \
    animation.h \
    resource.h \
    components.h \
    services.h
